package com.example.banking.service;

import com.example.common.banking.TransferRequest;
import com.example.common.banking.TransferResponse;

import java.util.UUID;

import com.example.common.banking.BankingServiceGrpc.BankingServiceImplBase;

import io.grpc.stub.StreamObserver;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.server.service.GrpcService;

@Slf4j
@GrpcService
public class BankingService extends BankingServiceImplBase {
    @Override
    public void processTransfer(TransferRequest request, StreamObserver<TransferResponse> responseObserver) {
        log.info("gRPC 이체 요청: {} -> {}, 금액: {}", request.getSenderAccount(), request.getReceiverAccount(), request.getAmount());

        String txId = UUID.randomUUID().toString();
        String message = String.format("정상 처리되었습니다. (보낸이: %s)", request.getSenderAccount());

        TransferResponse response = TransferResponse.newBuilder()
                .setTransactionId(txId)
                .setSuccess(true)
                .setMessage(message)
                .build();

        responseObserver.onNext(response);
        responseObserver.onCompleted();
    }
}
